# gensui

./: .gitignore  Cargo.toml  README.md  workflows.json
docs/: SESSION_HISTORY.md
src/: config.rs  log_parser.rs  main.rs  session_import.rs  state.rs  worker.rs
src/app/: actions.rs  event_handler.rs  mod.rs  rendering.rs  types.rs  worker_view.rs
src/ui/: helpers.rs  log_view.rs  mod.rs  modals.rs  render.rs  types.rs
src/worker/: mod.rs  name_registry.rs  name_validator.rs
tests/: pty_execution.rs
