[package]
name = "gensui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
crossterm = "0.27"
ratatui = { version = "0.28", features = ["crossterm"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
time = { version = "0.3", features = ["formatting"] }
clap = { version = "4", features = ["derive"] }
